lib/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(els) {return {type: 'layer', value: els || []}},
      peg$c1 = "{{",
      peg$c2 = peg$literalExpectation("{{", false),
      peg$c3 = "}}",
      peg$c4 = peg$literalExpectation("}}", false),
      peg$c5 = peg$anyExpectation(),
      peg$c6 = function(txt) { return {type: 'text', value: txt } },
      peg$c7 = "=",
      peg$c8 = peg$literalExpectation("=", false),
      peg$c9 = ".",
      peg$c10 = peg$literalExpectation(".", false),
      peg$c11 = function(partial, first, tail) {return tail},
      peg$c12 = "[",
      peg$c13 = peg$literalExpectation("[", false),
      peg$c14 = "]",
      peg$c15 = peg$literalExpectation("]", false),
      peg$c16 = function(partial, first, tail) {
                  const arr=[first];
                  if (tail) {
                    for (let i of tail) {
                        arr.push(i)
                    };
                  }
                  const result = { type: 'id', value:arr };
                  return partial ? {type: 'need_to_parse', value: result} : result;
              },
      peg$c17 = "(",
      peg$c18 = peg$literalExpectation("(", false),
      peg$c19 = ")",
      peg$c20 = peg$literalExpectation(")", false),
      peg$c21 = function(fname, args) {return {type: 'function', value: fname, args: args || []}},
      peg$c22 = ",",
      peg$c23 = peg$literalExpectation(",", false),
      peg$c24 = function(first, arg) {return arg;},
      peg$c25 = function(first, tail) {
          	const arr = [first];
              for (let i of tail) {
              	arr.push(i)
              };
              return arr;
          },
      peg$c26 = "@",
      peg$c27 = peg$literalExpectation("@", false),
      peg$c28 = function(value) {return {type: 'pointer', value}},
      peg$c29 = function(lex) {return {type: 'integer', value: parseInt(lex.join(''), 10)}},
      peg$c30 = function(lex) {return !keywords.includes(lex.toLowerCase())},
      peg$c31 = function(lex) {return {type: 'regular', value: lex}},
      peg$c32 = function(open, truePath, falsePath, end) {
      		    let txt = [open.txt];
      		    if (falsePath) {
      		        txt.push(falsePath.txt);
      		    }
      		    txt.push(end);
      		    return {
      		        type: 'tag_if',
      		        value: open.value,
      		        truePath: truePath || [],
      		        falsePath: falsePath && falsePath.layer || [],
      		        txt
                  }
              },
      peg$c33 = function(value) { return {value, txt: text()} },
      peg$c34 = function(open, falsePath, truePath, end) {
                  let txt = [open.txt];
                  if (truePath) {
                      txt.push(truePath.txt);
                  }
                  txt.push(end);
          	    return {
          	        type: 'tag_if',
          	        value: open.value,
          	        truePath: truePath && truePath.value || [],
          	        falsePath: falsePath || [],
          	        txt
                  }
              },
      peg$c35 = function(expr) { return {type: 'tag_insert', value: expr, txt: text()} },
      peg$c36 = function(open, value, end) {
                  return {
                      type: 'tag_for', init: open.init, cond: open.cond, after: open.after, value, txt: [open.txt, end]
                  }
              },
      peg$c37 = function(init, cond, after) { return {init, cond, after, txt: text()} },
      peg$c38 = function(variable, source) { return {variable, source, txt: text()} },
      peg$c39 = function(open, value) { return text(); },
      peg$c40 = function(open, value, empty, emptyLayer) { return text(); },
      peg$c41 = function(open, value, empty, emptyLayer, delimiter, delimiterLayer, end) {
          	    return buildEachTag(open, value, empty, emptyLayer, delimiter, delimiterLayer, end);
              },
      peg$c42 = function(open, value, delimiter, delimiterLayer) { return text(); },
      peg$c43 = function(open, value, delimiter, delimiterLayer, empty, emptyLayer, end) {
          	    return buildEachTag(open, value, empty, emptyLayer, delimiter, delimiterLayer, end);
              },
      peg$c44 = function(expr) { return {expr, txt: text()} },
      peg$c45 = function(open, layer, end) { return {type: 'tag_while', expression: open.expr, layer, txt: [open.txt, end]} },
      peg$c46 = function() { return text(); },
      peg$c47 = function(open, layer, expr) { return {expr, txt: text()} },
      peg$c48 = function(open, layer, whilePart) { return {type: 'tag_do_while', expression: whilePart.expr, layer, txt: [open, whilePart.txt]} },
      peg$c49 = function(expression) { return {type: 'tag_set', expression, txt: text()} },
      peg$c50 = function() { return {type: 'tag_empty'}; },
      peg$c51 = "end",
      peg$c52 = peg$literalExpectation("END", true),
      peg$c53 = "else",
      peg$c54 = peg$literalExpectation("ELSE", true),
      peg$c55 = function(txt, layer) { return {layer, txt} },
      peg$c56 = function(expr) { return expr },
      peg$c57 = function(left, operator, right) { return {type: 'expression', left, right, operator} },
      peg$c58 = function(operator, right) { return {type: 'expression', right, operator} },
      peg$c59 = function(left, operator) { return {type: 'expression', left, operator} },
      peg$c60 = function(first, tail) {
          	const arr = [first];
              for (let i of tail) {
              	arr.push(i)
              };
              return {type: 'multi_expression', value:arr};
          },
      peg$c61 = function(first, tail) {
          	const arr = [first];
              for (let i of tail) {
              	arr.push(i)
              };
              return  {type: 'multi_expression', value:arr};
          },
      peg$c62 = "===",
      peg$c63 = peg$literalExpectation("===", false),
      peg$c64 = "!==",
      peg$c65 = peg$literalExpectation("!==", false),
      peg$c66 = "==",
      peg$c67 = peg$literalExpectation("==", false),
      peg$c68 = "!=",
      peg$c69 = peg$literalExpectation("!=", false),
      peg$c70 = "<",
      peg$c71 = peg$literalExpectation("<", false),
      peg$c72 = "<=",
      peg$c73 = peg$literalExpectation("<=", false),
      peg$c74 = ">",
      peg$c75 = peg$literalExpectation(">", false),
      peg$c76 = ">=",
      peg$c77 = peg$literalExpectation(">=", false),
      peg$c78 = "%",
      peg$c79 = peg$literalExpectation("%", false),
      peg$c80 = "+",
      peg$c81 = peg$literalExpectation("+", false),
      peg$c82 = "-",
      peg$c83 = peg$literalExpectation("-", false),
      peg$c84 = "*",
      peg$c85 = peg$literalExpectation("*", false),
      peg$c86 = "/",
      peg$c87 = peg$literalExpectation("/", false),
      peg$c88 = "+=",
      peg$c89 = peg$literalExpectation("+=", false),
      peg$c90 = "-=",
      peg$c91 = peg$literalExpectation("-=", false),
      peg$c92 = function(op) {return 'prefix' + op},
      peg$c93 = "++",
      peg$c94 = peg$literalExpectation("++", false),
      peg$c95 = "--",
      peg$c96 = peg$literalExpectation("--", false),
      peg$c97 = function(op) {return 'postfix' + op},
      peg$c98 = "&&",
      peg$c99 = peg$literalExpectation("&&", false),
      peg$c100 = function() {return '&&'},
      peg$c101 = "and",
      peg$c102 = peg$literalExpectation("AND", true),
      peg$c103 = "||",
      peg$c104 = peg$literalExpectation("||", false),
      peg$c105 = function() {return '||'},
      peg$c106 = "or",
      peg$c107 = peg$literalExpectation("OR", true),
      peg$c108 = "!",
      peg$c109 = peg$literalExpectation("!", false),
      peg$c110 = function() {return '!'},
      peg$c111 = "not",
      peg$c112 = peg$literalExpectation("NOT", true),
      peg$c113 = "`",
      peg$c114 = peg$literalExpectation("`", false),
      peg$c115 = function(chars) { return { type: "local_var", value: chars.join("") }; },
      peg$c116 = peg$otherExpectation("string"),
      peg$c117 = "\"",
      peg$c118 = peg$literalExpectation("\"", false),
      peg$c119 = function(chars) {
            return { type: "regular", subtype: "string", value: chars.join("") };
          },
      peg$c120 = "'",
      peg$c121 = peg$literalExpectation("'", false),
      peg$c122 = function(sequence) { return sequence; },
      peg$c123 = function() { return ""; },
      peg$c124 = /^[\n\r\u2028\u2029]/,
      peg$c125 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c126 = peg$otherExpectation("end of line"),
      peg$c127 = "\n",
      peg$c128 = peg$literalExpectation("\n", false),
      peg$c129 = "\r\n",
      peg$c130 = peg$literalExpectation("\r\n", false),
      peg$c131 = "\r",
      peg$c132 = peg$literalExpectation("\r", false),
      peg$c133 = "\u2028",
      peg$c134 = peg$literalExpectation("\u2028", false),
      peg$c135 = "\u2029",
      peg$c136 = peg$literalExpectation("\u2029", false),
      peg$c137 = /^[#,.;\^()['"\]!*=+\-><@]/,
      peg$c138 = peg$classExpectation(["#", ",", ".", ";", "^", "(", ")", "[", "'", "\"", "]", "!", "*", "=", "+", "-", ">", "<", "@"], false, false),
      peg$c139 = "if",
      peg$c140 = peg$literalExpectation("IF", true),
      peg$c141 = "unless",
      peg$c142 = peg$literalExpectation("UNLESS", true),
      peg$c143 = "each",
      peg$c144 = peg$literalExpectation("EACH", true),
      peg$c145 = "of",
      peg$c146 = peg$literalExpectation("OF", true),
      peg$c147 = "with",
      peg$c148 = peg$literalExpectation("WITH", true),
      peg$c149 = "empty",
      peg$c150 = peg$literalExpectation("EMPTY", true),
      peg$c151 = "for",
      peg$c152 = peg$literalExpectation("FOR", true),
      peg$c153 = "while",
      peg$c154 = peg$literalExpectation("WHILE", true),
      peg$c155 = "do",
      peg$c156 = peg$literalExpectation("DO", true),
      peg$c157 = "set",
      peg$c158 = peg$literalExpectation("SET", true),
      peg$c159 = /^[0-9]/,
      peg$c160 = peg$classExpectation([["0", "9"]], false, false),
      peg$c161 = "\\",
      peg$c162 = peg$literalExpectation("\\", false),
      peg$c163 = "#",
      peg$c164 = peg$literalExpectation("#", false),
      peg$c165 = "^",
      peg$c166 = peg$literalExpectation("^", false),
      peg$c167 = /^[\r\n \t\f]/,
      peg$c168 = peg$classExpectation(["\r", "\n", " ", "\t", "\f"], false, false),
      peg$c169 = ";",
      peg$c170 = peg$literalExpectation(";", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0;

    s0 = peg$parseLayer();

    return s0;
  }

  function peg$parseLayer() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseElement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseElement();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseElement() {
    var s0;

    s0 = peg$parseRawText();
    if (s0 === peg$FAILED) {
      s0 = peg$parseTag();
    }

    return s0;
  }

  function peg$parseOpen() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c1) {
      s0 = peg$c1;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseClose() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c3) {
      s0 = peg$c3;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parseRawText() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$currPos;
    peg$silentFails++;
    s5 = peg$parseOpen();
    peg$silentFails--;
    if (s5 === peg$FAILED) {
      s4 = void 0;
    } else {
      peg$currPos = s4;
      s4 = peg$FAILED;
    }
    if (s4 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s5 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        s5 = peg$parseOpen();
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = void 0;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c6(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseId() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;
